--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/home/juchai/jaxcfd_venv/bin/python3"
+    "python.pythonPath": "/home/juchai/jaxcfd_venv/bin/python3",
+    "jupyter.jupyterServerType": "remote"
 }
